@@ -1,130 +1,146 @@
-## 🍽️ Sistem Pemesanan Makanan - Java OOP
-
-Sistem ini merupakan implementasi program pemesanan makanan sederhana berbasis console menggunakan konsep **Pemrograman Berorientasi Objek (OOP)** dalam bahasa Java. Program ini memungkinkan seorang **Manager** untuk mengelola menu makanan, dan seorang **Customer** untuk melihat dan memesan makanan.
+Berikut adalah versi lengkap dan diperbarui dari file `README.md` dengan tambahan **penjelasan tiap kelas** di bagian khusus "📦 Penjelasan Tiap Kelas":
 
 ---
 
-### 📁 Struktur Package dan Class
+## 🍽️ Sistem Pemesanan Makanan - Java OOP
+
+Sistem ini merupakan implementasi program pemesanan makanan sederhana berbasis console **(Main.java)** dan versi GUI **(MainGUI.java)** menggunakan konsep **Pemrograman Berorientasi Objek (OOP)** dalam bahasa Java.
+
+---
+
+### 📁 Struktur Folder & Kelas
 
 ```
 Model/
-│
-├── User.java           // Abstract class induk untuk Manager & Customer
-├── Manager.java        // Class untuk pengguna bertipe Manager
-├── Customer.java       // Class untuk pengguna bertipe Customer
-├── Menu.java           // Representasi objek menu makanan
-├── Order.java          // Menyimpan data pesanan customer
+├── User.java           // Abstract class untuk Manager & Customer
+├── Manager.java        // Untuk mengelola menu
+├── Customer.java       // Untuk melakukan pemesanan
+├── Menu.java           // Representasi item makanan
+├── Order.java          // Menyimpan dan mencetak data pesanan
+
+Main.java               // Program berbasis teks
+MainGUI.java            // Program berbasis GUI (Swing atau JavaFX)
 ```
+
+---
+
+### 📦 Penjelasan Tiap Kelas
+
+| Kelas      | Deskripsi                                                                                                                   |
+| ---------- | --------------------------------------------------------------------------------------------------------------------------- |
+| `User`     | Kelas abstrak sebagai dasar dari `Manager` dan `Customer`, menyimpan `username`.                                            |
+| `Manager`  | Turunan dari `User`, dapat menambah, mengedit, menghapus, dan melihat daftar menu. Memiliki password default `1234`.        |
+| `Customer` | Turunan dari `User`, dapat melihat menu, memilih item ke keranjang (cart), dan melakukan pemesanan.                         |
+| `Menu`     | Menyimpan data makanan/minuman: nama, harga, dan ID unik. Memformat harga dengan `DecimalFormat`.                           |
+| `Order`    | Mewakili pesanan yang dibuat oleh customer. Menghitung total harga dan mencetak struk pembelian.                            |
+| `Main`     | Program utama berbasis teks. Menyediakan interface untuk login sebagai Manager atau Customer.                               |
+| `MainGUI`  | Versi GUI dari program menggunakan Java Swing/JavaFX (jika tersedia). Menyediakan tampilan visual untuk menu dan pemesanan. |
 
 ---
 
 ### 🧠 Konsep OOP yang Digunakan
 
-* **Abstraksi**: `User` adalah abstract class yang menjadi superclass dari `Manager` dan `Customer`.
-* **Inheritance**: `Manager` dan `Customer` mewarisi dari `User`.
-* **Encapsulation**: Atribut-atribut dibuat private/protected dengan getter/setter.
-* **Polymorphism**: Pemanfaatan method overriding dalam class turunan.
+* **Abstraksi**: `User` sebagai superclass abstract
+* **Inheritance**: `Manager` dan `Customer` mewarisi dari `User`
+* **Encapsulation**: Data disembunyikan dengan `private` dan diakses melalui getter/setter
+* **Polymorphism**: Method diturunkan dan dimodifikasi di class turunan
 
 ---
 
 ### 👨‍🍳 Fitur Manager
 
-Manager dapat:
+* Tambah menu makanan
+* Edit menu (nama dan harga)
+* Hapus menu
+* Lihat semua menu
 
-1. Menambahkan menu baru
-2. Mengedit nama atau harga menu yang sudah ada
-3. Menghapus menu
-4. Melihat seluruh daftar menu
-
-**Password default untuk manager**: `1234`
+> 💡 Default password Manager: `1234`
 
 ---
 
 ### 👤 Fitur Customer
 
-Customer dapat:
-
-1. Melihat daftar menu makanan
-2. Memesan beberapa item sekaligus
-3. Melihat struk pesanan lengkap dengan total harga
-4. Membatalkan pesanan jika diperlukan
+* Lihat daftar menu
+* Memesan beberapa makanan sekaligus
+* Cetak struk pesanan
+* Bisa batal atau lanjutkan pesanan
 
 ---
 
-### 🧾 Contoh Output Struk
+### 🧾 Contoh Struk
 
 ```
 --- Struk Pemesanan ---
-Customer: Budi
+Customer: Andi
 
-- Nasi Goreng x2 (Rp12000 each) = Rp24000
-- Teh Manis x1 (Rp5000 each) = Rp5000
-Total Harga: Rp29000
+- Ayam Goreng x2 (Rp15.000 each) = Rp30.000
+- Es Teh x1 (Rp5.000 each) = Rp5.000
+Total Harga: Rp35.000
 ------------------------
 ```
 
 ---
 
-### 🔧 Cara Menjalankan Program
+### ▶️ Cara Menjalankan Program
 
-1. Pastikan JDK telah terinstall (Java 8+).
-2. Compile semua file di folder `Model/`:
+#### ✅ Jalankan Versi Teks (Main.java)
+
+1. **Compile semua file**:
 
    ```bash
-   javac Model/*.java
+   javac Model/*.java Main.java
    ```
-3. Buatlah class `Main` di luar folder `Model` untuk menjalankan program. Contoh:
 
-```java
-import Model.*;
+2. **Jalankan program**:
 
-import java.util.*;
+   ```bash
+   java Main
+   ```
 
-public class Main {
-    public static void main(String[] args) {
-        Scanner scanner = new Scanner(System.in);
-        List<Menu> menuList = new ArrayList<>();
-        Manager manager = new Manager("admin");
-        Customer customer = new Customer("user");
+---
 
-        int pilihan;
-        do {
-            System.out.println("\n=== Sistem Pemesanan Makanan ===");
-            System.out.println("1. Login sebagai Manager");
-            System.out.println("2. Login sebagai Customer");
-            System.out.println("0. Keluar");
-            System.out.print("Pilihan: ");
-            pilihan = scanner.nextInt();
+#### ✅ Jalankan Versi GUI (MainGUI.java)
 
-            switch (pilihan) {
-                case 1:
-                    System.out.print("Masukkan password manager: ");
-                    scanner.nextLine();
-                    String pass = scanner.nextLine();
-                    if (pass.equals(manager.pass)) {
-                        manager.menuManager(menuList);
-                    } else {
-                        System.out.println("Password salah!");
-                    }
-                    break;
-                case 2:
-                    customer.lihatMenu(menuList);
-                    customer.pesan(menuList);
-                    break;
-            }
-        } while (pilihan != 0);
+1. **Pastikan GUI class sudah lengkap** (menggunakan Java Swing/JavaFX).
 
-        System.out.println("Terima kasih telah menggunakan sistem!");
-    }
-}
-```
+2. **Compile semua file**:
+
+   ```bash
+   javac Model/*.java MainGUI.java
+   ```
+
+3. **Jalankan GUI**:
+
+   ```bash
+   java MainGUI
+   ```
+
+> ⚠️ Jika kamu menggunakan JavaFX, tambahkan VM options:
+> `--module-path PATH_TO_FX --add-modules javafx.controls,javafx.fxml`
+
+---
+
+## 👥 Pembagian Tugas - Kelompok 7
+
+**Jumlah Anggota:** 4 Orang
+**Nama Kelompok:** Kelompok 7
+
+| No. | Nama      | Tugas                                                                                                                                                               |
+| --- | --------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1.  | Yusuf | - Membuat class `MenuItem` dan `Order`  <br> - Menentukan atribut, constructor, method, dan format struk <br> - Menghitung total harga pemesanan                    |
+| 2.  | Maisyah | - Membuat class abstrak `User`  <br> - Mengembangkan class `Customer` (inherit dari `User`) <br> - Menambahkan fitur lihat menu dan pemesanan makanan oleh customer |
+| 3.  | Hilmy | - Membuat class `Manager` (inherit dari `User`) <br> - Menambahkan fitur tambah, edit, hapus, dan lihat menu <br> - Menyusun menu interaktif untuk manager          |
+| 4.  | Ghani     | - Membuat class `Main` sebagai menu utama <br> - Menyusun logika pemilihan peran (Customer / Manager) <br> - Integrasi seluruh class ke dalam satu alur sistem      |
+
+---
 
 ### 👨‍💻 Dibuat Oleh
 
 * **Kelompok 7**
-* **Prodi**: \Sistem Informasi
+* **Kelas / Prodi**: Kelas A / Sistem Informasi
 * **Mata Kuliah**: Pemrograman Berorientasi Objek
-* **Anggota**: \-Bismillah Ghaniyyu Putra D
-                -Hilmy Affayad Akbar
-                -Moch. Syech Yusuf. M
-                -Maisyah Mahdiyyah
+* **Dosen**: Dr. Eng. Supri Bin Hj Amir, S.Si., M.Eng
+* **Anggota**:  * Bismillah Ghaniyyu Putra D 
+                * Hilmy Affayad Akbar 
+                * Moch. Syech Yusuf. M
+                * Maisyah Mahdiyyah
